--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "wiki-like application that allows users to create, collaborate, and share wikis",
   "main": "src/server.js",
   "scripts": {
-    "test": "set NODE_ENV=test && jasmine"
+    "test": "set NODE_ENV=test && jasmine",
+    "start": "node src/server.js"
   },
   "author": "Suzy Lockwood",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "request": "^2.83.0"
   },
   "dependencies": {
+    "dotenv": "^5.0.0",
     "express": "^4.16.2"
   }
 }
